[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neo-pocketmod-creator"
version = "1.0.0"
description = "A modern Python tool that converts standard PDFs into PocketMod format PDFs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Han Yuan", email = "han@example.com"}
]
keywords = ["pdf", "pocketmod", "booklet", "printing", "folding"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Office/Business",
    "Topic :: Printing",
    "Topic :: Utilities",
]
requires-python = ">=3.7"
dependencies = [
    "PyMuPDF>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pdf2image>=3.0.0",
    "Pillow>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/neo-pocketmod-creator"
Repository = "https://github.com/yourusername/neo-pocketmod-creator"
Issues = "https://github.com/yourusername/neo-pocketmod-creator/issues"

[project.scripts]
pocketmod = "neo_pocketmod_creator:main"

[tool.setuptools]
py-modules = ["neo_pocketmod_creator"]


[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.jpg", "*.pdf"]